<resources>
    <string name="app_name" translatable="false">Bahaso</string>
    <string name="facebook_app_id" translatable="false">1074535205923660</string>
    <string name="bahaso_client_id" translatable="false">419452257310-qc3uuia3brsoqceh2q3ih3mcqdl03ejb.apps.googleusercontent.com</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email_username">Email or Username</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="title_forgot_pass">Forgot Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="terms">"By joining I declare that I have read and I accept
                        &lt;a href=\"http://www.bahaso.com/terms\">&lt;b>The Terms &amp; Conditions &lt;/b> &lt;/a>
                        and
                        &lt;a href=\"http://www.bahaso.com/privacy\">&lt;b>The Privacy Policy &lt;/b> &lt;/a>"</string>
    <string name="sign_in_with_facebook">Sign In with Facebook</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="txt_b4_exit">Are you sure want to exit?</string>
    <string name="enter_email_to_reset">We will send you instructions on how to reset your password by email.</string>
    <string name="btn_txt_send">Send</string>
    <string name="text_confirm_password">Confirmation Code</string>
    <string name="text_resend_email">Resend Email</string>
    <string name="email_confirmation_title">Email Confirmation</string>
    <string name="text_confirm">Confirmation</string>
    <string name="confirmation_text">Please enter the confirmation code that was sent to your email</string>
    <string name="tab_gold">GOLD</string>
    <string name="tab_home">HOME</string>
    <string name="tab_voucher">VOUCHER</string>
    <string name="lesson">Lesson</string>
    <string name="community">Community</string>
    <string name="bahaso_coming_soon" translatable="false">BETA</string>
    <string name="voucher_text">Using Voucher Code</string>
    <string name="enter_voucher_code">Enter voucher code</string>
    <string name="redeem_voucher">Redeem Voucher</string>
    <string name="gold_top_up_package_title">Refill Gold</string>
    <string name="text_yes">YES</string>
    <string name="text_no">NO</string>
    <string name="my_certificate">Certificate</string>
    <string name="profile_not_filled">(not filled yet)</string>
    <string name="non_premium_status" translatable="false">Non Premium</string>
    <string name="premium_until_xx">Premium Until %s</string>
    <string name="please_enable_storage_permission">To use the storage,
        please go to the Apps -> Settings -> Permissions the allow the storage</string>
    <string name="please_enable_camera_permission">To use camera,
        please go to the Apps -> Settings -> Permissions then allow the camera</string>
    <string name="select_image">Select Image</string>
    <string name="file_provider_authority" translatable="false">com.bahaso.fileprovider</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthdate">Birthday</string>
    <string name="country">Country</string>
    <string name="phone_number">Phone Number</string>
    <string name="hint_job">Job</string>
    <string name="hint_about_me">About Me</string>
    <string name="editprofil">Edit Profile</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="simpan">Save</string>
    <string name="select_country">Select Country</string>
    <string name="refill_gold_package">Refill Gold Package</string>
    <string name="payment_method">Payment Method</string>
    <string name="creditcard">Credit Card</string>
    <string name="transferatm" translatable="false">ATM Transfer</string>
    <string name="credit_card">Credit Card</string>
    <string name="credit_card_number_hint" translatable="false">XXXX XXXX XXXX XXXX</string>
    <string name="exp_date" translatable="false">Exp. Date</string>
    <string name="cc_expiry_date_hint" translatable="false">MM/YYYY</string>
    <string name="cc_cvv_hint" translatable="false">XXX</string>
    <string name="cc_number_hint">Credit Card Number</string>
    <string name="cc_expiry_date_hint2" translatable="false">Expire Date (MM/YYYY)</string>
    <string name="cc_cvv_hint2" translatable="false">CVV</string>
    <string name="paynow">Pay Now</string>
    <string name="credit_card_number_must_be_filled">Credit Card Number must be filled</string>
    <string name="credit_card_must_be_16_digits">Credit Card Number must be 16 digits</string>
    <string name="expiry_date_must_be_filled">Expired Date must be filled</string>
    <string name="cvv_must_be_filled">CVV must be filled</string>
    <string name="cvv_must_be_minimum_3_digits">CVV must be minimum 3 digits</string>
    <string name="bank_transfer_info1">Please finish the payment via ATM</string>
    <string name="bank_transfer_info2">Make sure that you enter below virtual account code</string>
    <string name="bank_transfer_info3">Make sure the transferred amount is same like stated below</string>
    <string name="bank_transfer_info4">Transfer the payment before:</string>
    <string name="bank_transfer_info5">The payment detail and guideline can be referred in you...</string>
    <string name="bank_transfer_info6">Gold will be added after transfer</string>
    <string name="atm_transfer" translatable="false">ATM Transfer</string>
    <string name="bca_pay_group_name">Payment via ATM BCA/ATM Prima Network</string>
    <string name="mandiri_pay_group_name">Payment via ATM Mandiri/ATM Bersama Network</string>
    <string name="permata_pay_group_name">Payment via Permata Bank</string>
    <string name="alto_pay_group_name">Payment via Alto Bank</string>
    <string name="account_title">Account</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="change_password_title">Change Password</string>
    <string name="sound_title">Sound</string>
    <string name="no_speech_recog_detected">No Speech Recognition Detected in your Device</string>
    <string name="microphone">Microphone</string>
    <string name="faq">FAQ</string>
    <string name="feedback">Feedback</string>
    <string name="logout_title">Logout</string>
    <string name="install_google_app_message">You need to install Google app from Google Play Store in order to use the Speech Recognition Service.</string>
    <string name="cannot_run_speech_recognition">Cannot run speech recognition</string>
    <string name="speech_recog_permission_denied">You need to enable permission for microphone in the app settings</string>
    <string name="speech_recog_language_no_support">Speech recognition does not have the language needed for recognition</string>
    <string name="setting">Settings</string>
    <string name="course_not_choosen">(not choose the course yet)</string>
    <string name="logout_app_ask">Logout?</string>
    <string name="logout_app_message_ask_xxx">Are you sure you to logout from %s?</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_confirm">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="label_enter_feedback">Please give the constructive feedback in order to improve Bahaso application</string>
    <string name="hint_feedback_title">Title</string>
    <string name="hint_location">Your Location</string>
    <string name="hint_cellphone_number">Your Phone Number (optional)</string>
    <string name="hint_feedback_message">Feedback</string>
    <string name="top_up_success">Top Up Success</string>
    <string name="secure_3d" translatable="false">3D Secure</string>
    <string name="payment_web_exit_dialog_title">Cancel Transaction?</string>
    <string name="payment_web_exit_dialog_message">Are you sure want to cancel this transaction?</string>
    <string name="transfer_now">Transfer Now</string>
    <string name="date_hour_format" formatted="false">dd MMMM yyyy, \'at\' HH:mm</string>
    <string name="up">Up</string>
    <string name="tab_writing">My Writing</string>
    <string name="tab_course">Course</string>
    <string name="tab_upgrade" translatable="false">Upgrade</string>
    <string name="txt_cc_pay_method">Payment via Credit Card</string>
    <string name="txt_continue">Continue</string>
    <string name="bank_transfer_bca">Bank Transfer BCA</string>
    <string name="bank_transfer_mandiri">Bank Transfer Mandiri</string>
    <string name="bank_transfer_permata">Bank Transfer Permata</string>
    <string name="bank_transfer_prima">Pembayaran melalui jaringan ATM Prima</string>
    <string name="bank_transfer_bersama">Pembayaran melalui jaringan ATM Bersama</string>
    <string name="bank_transfer_alto">Pembayaran melalui jaringan ATM Alto</string>
    <string name="txt_payment_code">The following is your payment code</string>
    <string name="txt_make_sure_nominal_payment">Make sure the amount you transferred is:</string>
    <string name="txt_payment_procedures">Payment detail and procedure payment can be seen again via email or screeshot this page first.</string>
    <string name="txt_gold_auto_increase">Gold automatically increase after transaction succeed.</string>
    <string name="txt_back_to_home">Back to Home</string>
    <string name="txt_no_history_payment">No History Payment</string>
    <string name="payment_fail">Payment Fail</string>
    <string name="payment_success">Payment Success</string>
    <string name="payment_wait_confirm">Waiting to Confirm</string>
    <string name="paymentHistory">Payment History</string>
    <string name="paymentHistoryDetail">Payment Detail</string>
    <string name="txt_bank_destination">Destination Bank</string>
    <string name="txt_payment_method">Payment Method</string>
    <string name="txt_failed_synchronize_google">Fail to synchronize to your Google account</string>
    <string name="txt_more_info"><![CDATA[<b>…more…</b>]]></string>
    <string name="txt_empty_point" translatable="false">0 pts</string>
    <string name="txt_failed_synchronize_facebook">Fail to sychronize your Facebook account</string>
    <string name="case_single_text_end_with_space" translatable="false">%1$s&#160;</string>
    <string name="case_single_text_startend_with_space" translatable="false">&#160;%1$s&#160;</string>
    <string name="type_here">Type here</string>
    <string name="riwayat_pembayaran">Payment History</string>
    <string name="voucher_text_code">Voucher Code</string>
    <string name="case_true">TRUE</string>
    <string name="case_false">FALSE</string>
    <string name="pilih_gold">Please refill gold according to your need.</string>
    <string name="jumlah_gold">Amount Gold</string>
    <string name="choose_payment_method">Choose Payment Method</string>
    <string name="audio_in_progress_download">Audio download is in progress</string>
    <string name="txt_turn_off_microphone">Turn off microphone</string>
    <string name="txt_turn_on_microphone">Turn on microphone</string>
    <string name="txt_punya_kode_voucher">Have a voucher code?\n Tukar voucher dibawah ini</string>
</resources>