<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/white"
    tools:context="com.bahaso.logindaftar.Login">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/bahaso_blue"
        app:titleTextColor="#FFFFFF"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:contentInsetStartWithNavigation="0dp"
        app:contentInsetLeft="0dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:paddingTop="10dp"
        android:paddingLeft="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingRight="12dp"
        android:textColorHint="#999999" >

        <EditText
            android:id="@+id/input_email_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/email_username"
            android:inputType="textEmailAddress"
            android:textColor="@color/bahaso_black"
            android:textAlignment="viewStart"
            android:theme="@style/EditTextStyle"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_email"
        android:paddingTop="10dp"
        android:paddingLeft="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingRight="12dp"
        android:textColorHint="#999999">

        <com.maksim88.passwordedittext.PasswordEditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColor="@color/bahaso_black"
            app:pet_hoverShowsPw="true"
            android:theme="@style/EditTextStyle" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/btn_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_password"
        android:layout_marginTop="8dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:clickable="true"
        android:onClick="onClick_login"
        android:padding="10dp">

        <TextView
            android:id="@+id/txt_forget_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass"
            android:textSize="16sp"
            android:textColor="@color/bahaso_black"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_btn_login_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:background="@drawable/background_btn_login"
        android:clickable="true"
        android:onClick="onClick_login"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="16sp"
            android:textColor="@drawable/text_color_gold" />

    </LinearLayout>


</RelativeLayout>
